[package]
name = "chat"
version = "0.1.0"
authors = ["buggoing <tjbuggo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mongodb = "1.1.1"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
redis = "0.17.0"
tonic = "0.3"
prost = "0.6"


[build-dependencies]
tonic-build = "0.3"